add many song api
