# routes/song.route.js
@@ -1,6 +1,15 @@
 const express = require('express');
 const passport = require('passport');
-const { createSong, getAllSongs, deleteSong, getSong, getTopViews, getByGenre, uploadDefaultThumbnail } = require('../controllers/song.controller.js');
+const {
+	createSong,
+	getAllSongs,
+	deleteSong,
+	getSong,
+	getTopViews,
+	getByGenre,
+	uploadDefaultThumbnail,
+	addMultipleSong,
+} = require('../controllers/song.controller.js');
 const { isUser, isAdmin } = require('../middlewares/authMiddlewares.js');
 const { validateParams, schemas } = require('../middlewares/validate.js');
 const upload = require('../middlewares/multer.js');
@@ -29,5 +38,7 @@ router
 	.get([validateParams(schemas.pathId, 'id')], [passport.authenticate('jwt', { session: false }), isUser], getSong);
 
 router.post('/default_thumbnail', [passport.authenticate('jwt', { session: false }), isAdmin], upload.single('defaultThumbnail'), uploadDefaultThumbnail);
+
+router.post('/add_many_song', [passport.authenticate('jwt', { session: false }), isAdmin], upload.single('dataCsv'), addMultipleSong);
 
 module.exports = router;
